5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_2446.log
== TEST (2019-04-06 02:12:55) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
print(a)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:14:05) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x//10000
c=x//1000
d=x//100
e=x//10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
8
87
876
8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:14:40) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=x//1000
d=x//100
e=x//10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
2
87
876
8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:15:19) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=(x//1000)%10
d=x//100
e=x//10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
2
7
876
8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:15:38) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=(x//10000)%10
d=x//100
e=x//10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
2
8
876
8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:16:21) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=(x//10000)%10
d=(x//1000)%10
e=(x//100)%10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
2
8
7
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:17:23) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=(x//10000)%10
d=(x//1000)%10
e=(x//100)%10
f=(x//10)%10
print(a)
print(b)
print(c)
print(d)
print(e)
-- OUTPUT:
0
2
8
7
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:17:39) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=x%10
c=(x//10000)%10
d=(x//1000)%10
e=(x//100)%10
f=(x//10)%10
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
2
8
7
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:19:32) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x//%10
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
File "XXXX", line 7
    f=x//%10
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:19:42) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:21:31) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
if((b+d+f)%(a+c+e)=="0"):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:21:42) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
if((b+d+f)%(a+c+e)=="0"):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:22:35) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
g=(b+d+f)%(a+c+e)
print(g)
if((b+d+f)%(a+c+e)=="0"):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:22:58) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
g=(b+d+f)%(a+c+e)
if((g=="0"):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 9
    if((g=="0"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:23:06) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
g=(b+d+f)%(a+c+e)
if(g=="0"):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:23:57) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
g=(b+d+f)%(a+c+e)
if(g == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 02:24:09) 
-- CODE:
x=int(input("Digite uma senha :"))
a=x//100000
b=(x//10000)%10
c=(x//1000)%10
d=(x//100)%10
e=(x//10)%10
f=x%10
g=(b+d+f)%(a+c+e)
if(g == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.128254
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
